test/error/VisibilityPrivateFieldPtr.fu
class Foo
{
	bool Priv = true;
}

public static class Test
{
	public static bool Run()
	{
		Foo() o;
		Foo p = o;
		return p.Priv; //ERROR: Cannot access private member 'Priv'
	}
}
